big update for front end

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,10 +14,9 @@ body {
 #root {
   width: 100%;
   height: 100%;
-  font-family: Arial, sans-serif;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 /* Shared css */
