--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -1,143 +1,102 @@
-.Home-Simulation{
+.Home-Simulation {
   height: 100%;
-  display: grid;
-  grid-template-rows: 40% 60%;
-}
-
-.login-avatar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-}
-
-.login-input {
-  display: grid;
-  padding: 5px 20px;
-  margin: 20px 0px;
-  grid-template-columns: 30% 70%;
-}
-.login-input-rand {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-avatar-block {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login-input input {
   width: 100%;
-  padding: 5px 20px;
-  height: 50px;
-  border-radius: 10px;
-  border: 2px solid #0B022D;
-  font-size: 16px;
-  outline: none;
-  font-weight: 600;
-  color: #0B022D;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  background: rgb(0, 145, 175);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 145, 175, 1) 0%,
+    rgba(11, 2, 45, 1) 50%,
+    rgba(3, 0, 50, 1) 100%
+  );
 }
 
-.button-groups {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.home-button {
-  width: 150px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
+.Home-map {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
-  color: #0B022D;
+}
+
+.Home-left-container {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.User-info {
   background-color: white;
-  border: 3px solid #0B022D;
-  cursor: pointer;
-  line-height: 1rem;
-  font-weight: 600;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-  transition: all 0.2s;
-}
-.home-button > span {
-  margin-left: 5px;
-}
-
-.home-button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  background-color: #0B022D;
-  color: white;
-  transition: all 0.2s;
-}
-
-.home-button:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.home-button:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.or-divider {
-  display: flex;
-  align-items: center;
-  margin: 20px;
-}
-
-.line {
-  flex-grow: 1;
-  height: 1px;
-  background-color: #aaa;
-}
-
-.or-text {
-  margin: 0 10px;
-  font-weight: bold;
-  color: #555;
-}
-
-.home-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 26px;
-  color: #555;
+  border-radius: 10px;
+  height: 200px;
+  padding: 10px;
   margin-bottom: 20px;
-}
-
-.continue-login-button {
-  width: 80%;
-  padding: 17px 20px;
-  text-align: center;
-  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  font-size: 16px;
-  background-color: #0B022D;
-  color: white;
-  cursor: pointer;
-  line-height: 1rem;
-  font-weight: 600;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-  transition: all 0.2s;
-  margin: 0 auto;
+  padding: 10px 30px;
+  width: 100%;
+  opacity: 0.8;
+  color: rgba(11, 2, 45, 1);
+  font-weight: bold;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+  display: grid;
+  grid-template-rows: 30% 70%;
+}
+.User-info > .Title {
+  font-size: 24px;
 }
 
-.continue-login-button:hover {
-  background-color: rgba(18, 24, 38, 0.9);
-  transition: all 0.2s;
+.User-info > .group-info > .user-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #f0f0f0;
+  margin-right: 60px;
+}
+
+.User-info > .group-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Booking {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-rows: 20% 20% 30% 20%;
+  align-items: center;
+  opacity: 0.8;
+  color: rgba(11, 2, 45, 1);
+  font-weight: bold;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 20px;
+}
+
+.Booking > .Title {
+  font-size: 24px;
+}
+
+.Booking > .button-group {
+  display: grid;
+  grid-template-columns: 40% 60%;
+}
+
+.Booking > .button-group > button {
+  width: 90%;
 }
